# asset-inventory

./: .gitignore  CHANGELOG.md  COMPARISON_CHART.md  Dockerfile  QUICK_START.md  README.md  app.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup_vuln_db.sh  vuln_database.py
templates/: error.html  index.html  service_detail.html
