[project]
name = "asset-inventory-scanner"
version = "0.1.0"
description = "Asset Inventory and Vulnerability Scanner with CPE/CVE matching"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
]

[project.scripts]
asset-scanner = "app:app"

[tool.uv]
dev-dependencies = []

